clean up and add breaking changes

--- a/docs/change-logs/6.0.md
+++ b/docs/change-logs/6.0.md
@@ -1,75 +1,12 @@
 # v6.0.0 ( August 2019 )
 
-## Features
+## Breaking Changes
 
-### Core engine rewrite and plugins
+### RDS Component renamed to align with vendor agnostic naming
 
-The biggest change is this release has been to our core template engine with the introduction of a modular architecture which uses dynamic loading for all components, resources and reference data
+As part of our support for multiple cloud providers for template generation we have changed the type name for the rds component to db. If you are using deployment profiles to manage configuration options on your db component you will need to update the type of all rds components in your solution to the db type in both the deployment profile and the component itself. This should not impact the RDS instances themselves but can override configuration applied using the deployment profile
 
-#### Dynamic Loading of component configuration
-
-Dynamic loading allows for freemarker files to be dynamically imported when they have been invoked rather than our existing process which combined all of our template files into a single file and used case statements to separate out different components. This process forms the foundation of the modular architecture while increasing the performance of the template engine. More details on the freemarker approach that we are using is available [here](https://freemarker.apache.org/docs/pgui_config_templateloading.html)
-
-- d09dd12 - <feature> Dynamic output formatting (#838) (Michael Leditschke)
-- ac0d9c6 - <refactor> Dynamic loading of seg/sol/app templates (#809) (Michael Leditschke)
-- beff719 - <refactor> Template processing (#836) (Michael Leditschke)
-- 809e0fc - <refactor> Use macros to create component config (#817) (Michael Leditschke)
-- 54272a3 - <refactor> Add dynamic state routine lookup (#802) (Michael Leditschke)
-
-#### Core engine improvements
-
-A collection of changes to our core engine to improve the development experience
-
-- Generic Logging replaces the existing GENERATION_DEBUG with the GENERATION_LOG_LEVEL variable. This allows for different log types to be used during template generation. To replace GENERATION_DEBUG use `export GENERATION_LOG_LEVEL=debug`
-
-- aab5271 - <feature> Processing timing (#841) (Michael Leditschke)
-- aac1463 - <feature> Generic logging (#830) (Michael Leditschke)
-- 343363a - <refactor> Separate occurrence/link processing from common (#846) (Michael Leditschke)
-- fec5dea - <refactor> Remove commonSegment.ftl (#852) (Michael Leditschke)
-- 13efb0a - <refactor> Remove commonSolution.ftl (#854) (Michael Leditschke)
-
-#### Generation Plans
-
-Generation plans allow for a component to specify the templates that need to be processed and generated. Generation plans are generated through the same template engine and provide the combinations of templates which need to be generated. This plan is then processed to generate the actual templates you need. This significantly reduces the processing time for template generation and reduces the number of passes requried to get all of the scripts setup.
-
-7bba831 - <feature> Generation plans for all components (#811) (Michael Leditschke)
-d78a9a0 - <feature> Generation plans (#810) (Michael Leditschke)
-
-#### Multi provider - Plugin
-
-This set of changes introduces the idea of plugins. We currently have two plugins
-
-- shared - which contains the standard component definitions which are vendor specific
-- aws - which contains the existing component, services and resources to deploy to AWS
-
-Plugins are loaded by the engine is responsible for the load process along with defining the core codeontap concepts like occurrences, components etc.
-
-To add a new plugin add the path to your plugin code to the GENERATION_PLUGIN_DIRS environment variable
-
-- 362c269 - <refactor> Split id files (#806) (Michael Leditschke)
-- c366bf6 - <refactor> Move master data under respective provider (#844) (Michael Leditschke)
-- 7617b71 - <refactor> Provider subdirectories (#832) (Michael Leditschke)
-- c3ed2dd - <refactor> Reorganise component files under aws provider (#815) (Michael Leditschke)
-- 95fea42 - <feature> Resource Groups and placements (#827) (Michael Leditschke)
-- 1b35507 - <refactor> Component service dependencies (#833) (Michael Leditschke)
-- 2155e15 - <feature> Static component dependencies (#819) (Michael Leditschke)
-
-#### Context Management for Account and product level solutions
-
-These changes are still in progress and introduce the idea of contexts. Contexts provide the foundation for cross product and links to account/tenant level components. This is an important step in our work to allow for deployments to multiple provider accounts and to multiple providers combined with our plugin support.
-
-- 242c75a - <feature> Dynamic model control. (#870) (Michael Leditschke)
-- 2447b1e - <feature> Round out context based model support (#953) (Michael Leditschke)
-- 930cd2f - <feature> First cut of context based in-memory model (#859) (Michael Leditschke)
-- eced907 - <refactor> Transitional arangements for composites (#804) (Michael Leditschke)
-
-### Setting Namespaces
-
-Adds support for settings namespaces. Namespaces allow for custom settings structures for components. At the moment settings are looked up based on fixed values based on the name of occurrence details. SettingNamespaces work in a similar way to domain naming where different occurrence name sections are combined to generate a new namespace.
-
-Combining Namespaces with deployment profiles offers a way to provide settings to groups of components
-
-- 57fa2bb - <feature> Core setting namespaces (#697) (roleyfoley)
+- 224833c - <refactor> Rename RDS component to DB (#881) (Michael Leditschke)
 
 ### CDN/SPA Updates - Breaking Change
 
@@ -84,43 +21,25 @@ For AWS deployments this transition will require a breaking change for existing 
 
 ### Userpool updates and federated roles
 
-These changes split the Federated identity pool functionality which provides access to a cloudprovider using external identities away from the user pool component that we have now. In AWS these functions are provided by the same AWS service however they are quite different in what they do.
+These changes split the Federated identity pool functionality which provides access to a cloud provider using external identities away from the user pool component that we have now. In AWS these functions are provided by the same AWS service however they are quite different in what they do.
 
-The federated role component allows you to use the identities from a userpool to access resources in a cloud provider which require native authentication methods e.g. AWS IAM for S3. User attrbutes can be used to map different permissions to provide role based access control as well.
+The federated role component allows you to use the identities from a third party authentication provider ( including userpools ) to access cloud provider resources which require native authentication methods e.g. AWS IAM for S3. User attributes can be used to map different permissions to provide role based access control as well.
+
+Along with the federated role changes we've also added support for userpool federation with an OIDC based authentication provider
+
+Finally we have updated the required setting values when using an external userpool to align with the changes introduced for clients in the last round of codeontap changes
 
 - 2283841 - <feat> Federated Roles (#828) (Michael Foley)
 - e1aad61 - <feature> Federated Role Attributes (#937) (Michael Foley)
-
-### Expo Fastlane support and Sentry Releases
-
-This continues on from our previous release to add [ExpoKit](https://docs.expo.io/versions/v31.0.0/expokit/) build and deploy support using [fastlane](https://fastlane.tools/). ExpoKit builds can not use the standard expo build process as they generally contain native application libraries, When using ExpoKit you need to build the binary app images your self which can be automated with tools such as fastlane.
-
-Along with ExpoKit builds we also add support for uploading sourcemaps created using expo to [Sentry](https://sentry.io) for exception monitoring and reporting
-
-- 3b7414e - <feature> expo app bundle id overrides (#845) (Michael Foley)
-- c73bf1c - <feature> Expo Fastlane build support (#865) (Michael Foley)
-- 3d149a6 - <feature> fastlane builds for expoKit apps (#850) (Michael Foley)
-- 0eab8e2 - <feature> upload source maps for the current expo sdk version only (#897) (Kseniya Shychko)
-- 6260312 - <feature> expo app id override (#894) (Michael Foley)
-- 7c8a16a - <feature> sentry releases (#888) (Kseniya Shychko)
-- f71cb3c - <feature> Expo build - skip OTA (#891) (Michael Foley)
-- c3783ee - Expo Testflight submission (#879) (Michael Foley)
-- 814ada1 - <feature> use BUILD_REFERENCE for sentry release name (#915) (Kseniya Shychko)
-- 3149509 - <feature> override expo revisionId after export (#909) (Kseniya Shychko)
-
-### Topics
-
-Adds a new component for Pub/Sub services called topics. Topics are used to distribute messages to different subscribers that need to know about a particular event which has occurred. For AWS we also added support for S3 events to trigger topics to notify of changes to an S3 bucket, along with allowing topics to invoke lambda functions when an event is received by the topic
-
-- 8d661df - <feature> add SNS as an inbound link for lambda (roleyfoley)
-- 648d8e2 - <feature> S3 extend notifications for sns lambda (roleyfoley)
-- a2196a3 - <feature> Add topic component (roleyfoley)
-- a020b15 - <feature> s3 service support for notifications (roleyfoley)
-- 9b66361 - <feature> topic add monitoring and permissions (roleyfoley)
+- 2e9a244 - <feature> OIDC userpool federation (#970) (Michael Foley)
+- 210d835 - <refactor>userpools: align ext and int config (roleyfoley)
+- 6795a0f - <fix> userpool only validate cognito config during cli pass (#976) (Michael Foley)
 
 ### Alert Actions
 
 This change adds to our existing alarms functionality with the ability to specify where alerts are sent to when they are triggered. Alerts must now be configured with a severity and the new AlertRules master configuration option allows you to distribute alarms to different components based on their severity. Initially we only support topics in the Alert Rule distributions.
+
+With the introduction of alert actions and topics we have removed the baseline SNS topic from the base line components. Instead you now need to create a new topic along with alert rules which match your requirements
 
 For example you can have two SNS topics setup
 
@@ -158,9 +77,196 @@ When we deploy the alerts you have configured on your component, these rules rou
 
 - c9b4475 - <feature> Add support for Alert Action controls (roleyfoley)
 
-### AutoScaling
+## Features
+
+### Core engine rewrite and plugins
+
+The biggest change is this release has been to our core template engine with the introduction of a modular architecture which uses dynamic loading for all components, resources and reference data
+
+#### Dynamic Loading of component configuration
+
+Dynamic loading allows for freemarker files to be dynamically imported when they have been invoked rather than our existing process which combined all of our template files into a single file and used case statements to separate out different components. This process forms the foundation of the modular architecture while increasing the performance of the template engine. More details on the freemarker approach that we are using is available [here](https://freemarker.apache.org/docs/pgui_config_templateloading.html)
+
+- d09dd12 - <feature> Dynamic output formatting (#838) (Michael Leditschke)
+- ac0d9c6 - <refactor> Dynamic loading of seg/sol/app templates (#809) (Michael Leditschke)
+- beff719 - <refactor> Template processing (#836) (Michael Leditschke)
+- 809e0fc - <refactor> Use macros to create component config (#817) (Michael Leditschke)
+- 54272a3 - <refactor> Add dynamic state routine lookup (#802) (Michael Leditschke)
+
+#### Core engine improvements
+
+A collection of changes to our core engine to improve the development experience
+
+Generic Logging replaces the existing GENERATION_DEBUG with the GENERATION_LOG_LEVEL variable. This allows for different log types to be used during template generation. To replace GENERATION_DEBUG use `export GENERATION_LOG_LEVEL=debug`
+
+Timings have been introduced to provide a better understanding on what is taking up the time in generating templates
+
+Updating the directory layout within the template engine to fully support the idea of plugins and core services
+
+- aab5271 - <feature> Processing timing (#841) (Michael Leditschke)
+- aac1463 - <feature> Generic logging (#830) (Michael Leditschke)
+- 343363a - <refactor> Separate occurrence/link processing from common (#846) (Michael Leditschke)
+- fec5dea - <refactor> Remove commonSegment.ftl (#852) (Michael Leditschke)
+- 13efb0a - <refactor> Remove commonSolution.ftl (#854) (Michael Leditschke)
+
+#### Generation Plans
+
+Generation plans allow for a component to specify the templates that need to be processed and generated. Generation plans are generated through the same template engine and provide the combinations of templates which need to be generated. This plan is then processed to generate the actual templates you need. This significantly reduces the processing time for template generation and reduces the number of passes requried to get all of the scripts setup.
+
+- 7bba831 - <feature> Generation plans for all components (#811) (Michael Leditschke)
+- d78a9a0 - <feature> Generation plans (#810) (Michael Leditschke)
+
+#### Multi provider - Plugin
+
+This set of changes introduces the idea of plugins. We currently have two plugins
+
+- shared - which contains the standard component definitions which are vendor specific
+- aws - which contains the existing component, services and resources to deploy to AWS
+
+Plugins are loaded by the engine is responsible for the load process along with defining the core codeontap concepts like occurrences, components etc.
+
+To add a new plugin add the path to your plugin code to the GENERATION_PLUGIN_DIRS environment variable
+
+- 362c269 - <refactor> Split id files (#806) (Michael Leditschke)
+- c366bf6 - <refactor> Move master data under respective provider (#844) (Michael Leditschke)
+- 7617b71 - <refactor> Provider subdirectories (#832) (Michael Leditschke)
+- c3ed2dd - <refactor> Reorganise component files under aws provider (#815) (Michael Leditschke)
+- 95fea42 - <feature> Resource Groups and placements (#827) (Michael Leditschke)
+- 1b35507 - <refactor> Component service dependencies (#833) (Michael Leditschke)
+- 2155e15 - <feature> Static component dependencies (#819) (Michael Leditschke)
+
+#### Context Management for Account and product level solutions
+
+These changes are still in progress and introduce the idea of contexts. Contexts provide the foundation for cross product and links to account/tenant level components. This is an important step in our work to allow for deployments to multiple provider accounts and to multiple providers combined with our plugin support.
+
+- 242c75a - <feature> Dynamic model control. (#870) (Michael Leditschke)
+- 2447b1e - <feature> Round out context based model support (#953) (Michael Leditschke)
+- 930cd2f - <feature> First cut of context based in-memory model (#859) (Michael Leditschke)
+- eced907 - <refactor> Transitional arangements for composites (#804) (Michael Leditschke)
+
+### Setting Namespaces
+
+Adds support for settings namespaces. Namespaces allow for custom settings structures for components. At the moment settings are looked up based on fixed values based on the name of occurrence details. SettingNamespaces work in a similar way to domain naming where different occurrence name sections are combined to generate a new namespace.
+
+Combining Namespaces with deployment profiles offers a way to provide settings to groups of components
+
+- 57fa2bb - <feature> Core setting namespaces (#697) (roleyfoley)
+
+### Expo Fastlane support and Sentry Releases
+
+This continues on from our previous release to add [ExpoKit](https://docs.expo.io/versions/v31.0.0/expokit/) build and deploy support using [fastlane](https://fastlane.tools/). ExpoKit builds can not use the standard expo build process as they generally contain native application libraries, When using ExpoKit you need to build the binary app images your self which can be automated with tools such as fastlane.
+
+Along with ExpoKit builds we also add support for uploading sourcemaps created using expo to [Sentry](https://sentry.io) for exception monitoring and reporting
+
+- 3b7414e - <feature> expo app bundle id overrides (#845) (Michael Foley)
+- c73bf1c - <feature> Expo Fastlane build support (#865) (Michael Foley)
+- 3d149a6 - <feature> fastlane builds for expoKit apps (#850) (Michael Foley)
+- 0eab8e2 - <feature> upload source maps for the current expo sdk version only (#897) (Kseniya Shychko)
+- 6260312 - <feature> expo app id override (#894) (Michael Foley)
+- 7c8a16a - <feature> sentry releases (#888) (Kseniya Shychko)
+- f71cb3c - <feature> Expo build - skip OTA (#891) (Michael Foley)
+- c3783ee - Expo Testflight submission (#879) (Michael Foley)
+- 814ada1 - <feature> use BUILD_REFERENCE for sentry release name (#915) (Kseniya Shychko)
+- 3149509 - <feature> override expo revisionId after export (#909) (Kseniya Shychko)
+
+### Topics
+
+Adds a new component for Pub/Sub services called topics. Topics are used to distribute messages to different subscribers that need to know about a particular event which has occurred. For AWS we also added support for S3 events to trigger topics to notify of changes to an S3 bucket, along with allowing topics to invoke lambda functions when an event is received by the topic
+
+- 8d661df - <feature> add SNS as an inbound link for lambda (roleyfoley)
+- 648d8e2 - <feature> S3 extend notifications for sns lambda (roleyfoley)
+- a2196a3 - <feature> Add topic component (roleyfoley)
+- a020b15 - <feature> s3 service support for notifications (roleyfoley)
+- 9b66361 - <feature> topic add monitoring and permissions (roleyfoley)
+
+### Scaling Policies
+
+Scaling policies allow you to add metric based autoscaling policies to components which have horizontal scaling capabilities. Scaling policies use our metric and alarm configuration to apply either stepped or tracked based scaling policies.
+
+Stepped scaling policies use an alarm to set a watermark level. You can the apply step policies relative to alarm threshold to scaling resources in and out
+Tracked scaling policy will automatically adjust the resource counts to keep a metric at as specific target value
+
+Scheduled policies are also available to schedule the maximum and minimum resource counts based on time based schedules. This allows you to restrict how many resources are deployed to meet the scaling policy. For example you might want to scale further during business hours than after hours.
+
+```json
+  {
+    "squid" : {
+        "Engine" : "fargate",
+        "DeploymentUnits" : [ "squid" ],
+        "Profiles" : {
+            "Processor" : "default"
+        },
+        "Containers" : {
+            "_squid" : {
+                "Version" : "latest",
+                "Cpu" : 256,
+                "Memory" : 512,
+                "MaximumMemory" : 512,
+                "Ports" : {
+                    "squid" : {
+                        "IPAddressGroups" : [ "_global" ]
+                    }
+                }
+            }
+        },
+        "NetworkMode" : "awsvpc",
+        "ScalingPolicies" : {
+            "TrackMemoryUsage" : {
+                "Type" : "Tracked",
+                "TrackingResource" : {
+                    "Link" : {
+                        "Tier" : "app",
+                        "Component" : "apphost",
+                        "Instance" : "",
+                        "Version" : ""
+                    },
+                    "MetricTrigger" : {
+                        "Name" : "MemoryUsage",
+                        "Metric" : "MemoryUtilization",
+                        "Threshold" : 2,
+                        "Severity" : "info",
+                        "Statistic" : "Average",
+                        "Unit" : "Percent"
+                    }
+                },
+                "Tracked" : {
+                    "TargetValue" : 80
+                }
+            },
+            "BusinessHours" : {
+                "Type" : "Scheduled",
+                "Scheduled" : {
+                    "ProcessorProfile" : "businesshours",
+                    "Schedule" : "cron(0 9 ? * MON-FRI *)"
+                }
+            },
+            "AfterHours" : {
+                "Type" : "Scheduled",
+                "Scheduled" : {
+                    "ProcessorProfile" : "afterhours",
+                    "Schedule" : "cron(0 18 ? * MON-FRI *)"
+                }
+            }
+        }
+    }
+  }
+```
+
+This example shows how you might want to scale an ecs service. We have a tracking metric on memory utilisation so that we can ensure we aren't over provisioning services. The scheduled policies change the processor profile for the service to restrict how many service instances can be deployed during after hours when we don't expect a lot of traffic.
+
+Scaling Policies are availble for ecs services, ecs solution clusters, compute clusters, and ec2 components
+
+- 10d3201 - <feature> Autoscaling ECS & Ec2 (#952) ( Michael Foley )
+
+### Object SQL
+
+Adds a new component which deploys the resources required for object store sql services ( like AWS athena ). The component doesn't deploy an actual database table as these are generally highly dependent on application code and are best left to an admin lambda function, instead this deploys the resources and permissions required to use the service
+
+- 73e8737 - <feature>Object SQL component (#969) ( Michael Foley )
 
 ### Azure Deployment Support
+
+These changes add the intial support for Azure as a provider. They are temporary workaround while we work through how to define the process for deploying resources in pluggable way.
 
 - 7a486c3 - feature - manageDeployment (#951) (Ross Murray)
 - b94f373 - format composite outputs for azure (Ross Murray)
@@ -179,7 +285,6 @@ When we deploy the alerts you have configured on your component, these rules rou
 - 672be66 - <refactor> Remove id/name defaulting (#918) (Michael Leditschke)
 - c7a9be5 - <refactor> Revert change to OWASP payload limit (Michael Leditschke)
 - f73af93 - <refactor> Align default OWASP size limit to API limit (Michael Leditschke)
-- 224833c - <refactor> Rename RDS component to DB (#881) (Michael Leditschke)
 - 709b796 - <refactor> remove product deployment components (roleyfoley)
 - 8d5ed24 - <refactor> remove product specifc id formating (roleyfoley)
 - 40ce947 - <refactor> baseline: Migrate OAI to cf for all deployments (#840) (Michael Foley)
@@ -187,7 +292,6 @@ When we deploy the alerts you have configured on your component, these rules rou
 - ded2abd - <refaactor> use baselineprofile for all components (roleyfoley)
 - 5e12005 - <refactor> baseline component lookups (roleyfoley)
 - 70c1f22 - <refactor> Locate server role via occurrence (#803) (Michael Leditschke)
-- 210d835 - <refactor>userpools: align ext and int config (roleyfoley)
 
 ## Fixes
 
