trigger version updat

--- a/docs/change-logs/6.0.md
+++ b/docs/change-logs/6.0.md
@@ -266,7 +266,7 @@ Adds a new component which deploys the resources required for object store sql s
 
 ### Azure Deployment Support
 
-These changes add the intial support for Azure as a provider. They are temporary workaround while we work through how to define the process for deploying resources in pluggable way.
+These changes add the intial support for Azure as a provider. They are temporary workaround while we work through how to define the process for deploying resources in pluggable way. Stay tuned for big changes in this space next release
 
 - 7a486c3 - feature - manageDeployment (#951) (Ross Murray)
 - b94f373 - format composite outputs for azure (Ross Murray)
