add topic example

--- a/docs/change-logs/6.0.md
+++ b/docs/change-logs/6.0.md
@@ -46,7 +46,7 @@ For example you can have two SNS topics setup
 - business-hours-topic
 - after-hours-support
 
-You could then have two AlertRules setup 
+You could then have two AlertRules setup
 
 ```json
   {
@@ -172,6 +172,49 @@ Along with ExpoKit builds we also add support for uploading sourcemaps created u
 ### Topics
 
 Adds a new component for Pub/Sub services called topics. Topics are used to distribute messages to different subscribers that need to know about a particular event which has occurred. For AWS we also added support for S3 events to trigger topics to notify of changes to an S3 bucket, along with allowing topics to invoke lambda functions when an event is received by the topic
+
+#### Solution
+
+```json
+{
+  "alerts" : {
+      "topic" : {
+          "Instances" : {
+              "default" : {
+                  "DeploymentUnits" : [ "alerts"]
+              }
+          },
+          "Subscriptions" : {
+              "fixit" : {
+                  "Links" : {
+                      "fixit" : {
+                          "Tier" : "external",
+                          "Component" : "fixiit"
+                      },
+                      "fixitemail" : {
+                          "Tier" : "external",
+                          "Component" : "fixitemail"
+                      }
+                  }
+              }
+          }
+      }
+  }
+}
+```
+
+#### Settings
+
+The setting below map to the two external links outlined in the solution
+
+```json
+{
+    "FIXIT_SUBSCRIPTION_PROTOCOL" : "https",
+    "FIXIT_SUBSCRIPTION_ENDPOINT" : "https://webhook.msw.io/fixit",
+    "FIXITEMAIL_SUBSCRIPTION_PROTOCOL" : "email",
+    "FIXITEMAIL_SUBSCRIPTION_ENDPOINT" : "fixit@msw.io"
+}
+```
 
 - 8d661df - <feature> add SNS as an inbound link for lambda (roleyfoley)
 - 648d8e2 - <feature> S3 extend notifications for sns lambda (roleyfoley)
